k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telemetry-pipeline
  namespace: telemetry

spec:
  replicas: 2

  selector:
    matchLabels:
      app: telemetry-pipeline

  template:
    metadata:
      labels:
        app: telemetry-pipeline

    spec:
      containers:
      - name: hello
        image: quay.io/openshifttest/hello-openshift:1.2.0

        ports:
        - containerPort: 8080
