k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: telemetry-pipeline
  namespace: telemetry

spec:
  to:
    kind: Service
    name: telemetry-pipeline

  port:
    targetPort: 8080
